# swagger/v1/swagger.json
@@ -5,50 +5,9 @@
     "version": "v1"
   },
   "paths": {
-    "/status": {
+    "/allocation/active": {
       "get": {
-        "summary": "Gets database status",
-        "tags": [
-          "System"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "security": [
-          {
-            "Bearer": ""
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successfully returned the database status",
-            "examples": {
-              "application/json": {
-                "status": "ok",
-                "postgresVersion": "PostgresSQL 10.0"
-              }
-            },
-            "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string"
-                },
-                "postgresVersion": {
-                  "type": "string"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Was not authenticated to return the database status"
-          }
-        }
-      }
-    },
-    "/poms/id=1&id=2&id=3": {
-      "get": {
-        "summary": "Prisoner Offender Managers by multiple ID",
+        "summary": "Obtains active allocation for provided offender id(s)",
         "tags": [
           "Allocation"
         ],
@@ -60,25 +19,134 @@
             "Bearer": ""
           }
         ],
+        "parameters": [
+          {
+            "name": "ids",
+            "in": "query",
+            "type": "array",
+            "required": "id"
+          }
+        ],
         "responses": {
           "200": {
-            "description": "Gets a list of Prisoner Offender Managers"
+            "description": "Returns active allocations for provided offender ids",
+            "examples": {
+              "application/json": {
+                "status": "ok",
+                "errorMessage": "",
+                "data": {
+                  "AB1234BC": {
+                    "id": 1,
+                    "offender_no": "12345",
+                    "offender_id": "AB1234BC",
+                    "prison": "LEI",
+                    "allocated_at_tier": "B",
+                    "reason": null,
+                    "note": null,
+                    "created_by": "Frank",
+                    "active": true,
+                    "prison_offender_manager_id": 1,
+                    "created_at": "2019-02-04T13:22:39.214Z",
+                    "updated_at": "2019-02-04T13:22:39.214Z",
+                    "nomis_staff_id": 1
+                  },
+                  "AB1234DD": {
+                    "id": 2,
+                    "offender_no": "12346",
+                    "offender_id": "AB1234DD",
+                    "prison": "LEI",
+                    "allocated_at_tier": "C",
+                    "reason": null,
+                    "note": null,
+                    "created_by": "Frank",
+                    "active": true,
+                    "prison_offender_manager_id": 2,
+                    "created_at": "2019-02-04T13:22:39.217Z",
+                    "updated_at": "2019-02-04T13:22:39.217Z",
+                    "nomis_staff_id": 2
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Must be authenticated to create an allocation"
           }
         }
-      }
-    },
-    "/health": {
-      "get": {
-        "summary": "Gets system health",
+      },
+      "post": {
+        "summary": "Obtains active allocation for provided offender id(s)",
         "tags": [
-          "System"
+          "Allocation"
         ],
         "produces": [
-          "text/plain"
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "security": [
+          {
+            "Bearer": ""
+          }
+        ],
+        "parameters": [
+          {
+            "name": "ids",
+            "in": "body",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string",
+                "required": true
+              }
+            }
+          }
         ],
         "responses": {
           "200": {
-            "description": "Successfully returned the system health"
+            "description": "Returns active allocations for provided offender ids",
+            "examples": {
+              "application/json": {
+                "status": "ok",
+                "errorMessage": "",
+                "data": {
+                  "AB1234BC": {
+                    "id": 1,
+                    "offender_no": "12345",
+                    "offender_id": "AB1234BC",
+                    "prison": "LEI",
+                    "allocated_at_tier": "B",
+                    "reason": null,
+                    "note": null,
+                    "created_by": "Frank",
+                    "active": true,
+                    "prison_offender_manager_id": 1,
+                    "created_at": "2019-02-04T13:22:39.367Z",
+                    "updated_at": "2019-02-04T13:22:39.367Z",
+                    "nomis_staff_id": 1
+                  },
+                  "AB1234DD": {
+                    "id": 2,
+                    "offender_no": "12346",
+                    "offender_id": "AB1234DD",
+                    "prison": "LEI",
+                    "allocated_at_tier": "C",
+                    "reason": null,
+                    "note": null,
+                    "created_by": "Frank",
+                    "active": true,
+                    "prison_offender_manager_id": 2,
+                    "created_at": "2019-02-04T13:22:39.369Z",
+                    "updated_at": "2019-02-04T13:22:39.369Z",
+                    "nomis_staff_id": 2
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Must be authenticated to create an allocation"
           }
         }
       }
@@ -147,7 +215,14 @@
         ],
         "responses": {
           "200": {
-            "description": "Generatesap an error with missing data",
+            "description": "Creates a new allocation, deactivating any previous allocations for the offender",
+            "examples": {
+              "application/json": {
+                "status": "ok",
+                "errorMessage": "",
+                "data": null
+              }
+            },
             "schema": {
               "type": "object",
               "properties": {
@@ -158,16 +233,88 @@
                   "type": "string"
                 }
               }
-            },
-            "examples": {
-              "application/json": {
-                "status": "error",
-                "errorMessage": "Invalid request"
-              }
             }
           },
           "401": {
             "description": "Must be authenticated to create an allocation"
+          }
+        }
+      }
+    },
+    "/health": {
+      "get": {
+        "summary": "Gets system health",
+        "tags": [
+          "System"
+        ],
+        "produces": [
+          "text/plain"
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully returned the system health"
+          }
+        }
+      }
+    },
+    "/poms/id=1&id=2&id=3": {
+      "get": {
+        "summary": "Prisoner Offender Managers by multiple ID",
+        "tags": [
+          "Allocation"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "security": [
+          {
+            "Bearer": ""
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Gets a list of Prisoner Offender Managers"
+          }
+        }
+      }
+    },
+    "/status": {
+      "get": {
+        "summary": "Gets database status",
+        "tags": [
+          "System"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "security": [
+          {
+            "Bearer": ""
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully returned the database status",
+            "examples": {
+              "application/json": {
+                "status": "ok",
+                "postgresVersion": "PostgresSQL 10.0"
+              }
+            },
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string"
+                },
+                "postgresVersion": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Was not authenticated to return the database status"
           }
         }
       }
